# ExpressionEvaluator

./: CMakeLists.txt  ExpressionEvaluator.cpp
Google_tests/: ASTParserTests.cpp  AllTests.cpp  CMakeLists.txt  ExpressionEvaluatorTests.cpp
Google_tests/lib/: googletest-distribution.cbp
Google_tests/lib/googlemock/: gmock.cbp
Google_tests/lib/googletest/: gtest.cbp
Google_tests/mocks/: EvaluatorMock.h  ParserMock.h
data_model/: ASTTree.cpp  ASTTree.h  Integer.h  Node.h  Operation.h
evaluator/: ASTEvaluator.h  Evaluator.h
exceptions/: LiteralTooBig.h  NegativeLiteralOrUnaryMinus.h
parser/: ASTParser.cpp  ASTParser.h  Parser.h  TokenProvider.h
